--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": ">=8.4"
+        "php": "^8.3"
     },
     "require-dev": {
 	"pestphp/pest": "^3.0"
