--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,16 @@
         }
     ],
     "require": {
-        "php": "^8.3"
+        "php": "^8.3",
+        "symfony/string": "^7.2"
     },
     "require-dev": {
 	"pestphp/pest": "^3.0"
     },
     "config": {
+        "platform": {
+            "php": "8.3.6"
+        },
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
